refactoring backend project
