# routes/user/userRouter.js
@@ -3,15 +3,12 @@ const userRouter = express.Router();
 const {
   validateUserRegistration,
   validateUserLogin,
-  validateEmail,
 } = require('./validationUsers');
 const {
   signup,
   login,
   logout,
   current,
-  verifyUser,
-  resendVerificationEmail,
 } = require('../../controllers/usersControllers');
 // Add guard for user
 const guard = require('../../helpers/guard');
@@ -29,9 +26,5 @@ userRouter.post('/login', validateUserLogin, login);
 userRouter.post('/logout', guard, logout);
 // add route of current user
 userRouter.get('/current', guard, current);
-// add route of verification email
-//userRouter.get('/verify/:emailVerificationToken', verifyUser);
-// add route of resending verification email
-//userRouter.post('/verify', validateEmail, resendVerificationEmail);
 
 module.exports = userRouter;
