# swagger.json
@@ -22,7 +22,10 @@
       "description": "Categories' endpoints"
     }
   ],
-  "servers": [{ "url": "http://localhost:3000" }, { "url": "" }],
+  "servers": [
+    { "url": "https://git.heroku.com/project-wallet-main.git" },
+    { "url": "http://localhost:3000" }
+  ],
   "paths": {
     "/users/signup": {
       "post": {
@@ -334,125 +337,6 @@
       }
     },
 
-    "/users/verify/:verificationToken": {
-      "get": {
-        "tags": ["Users"],
-        "summary": "Verification email",
-        "security": [{ "Bearer": [] }],
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "string",
-                      "description": "responses status",
-                      "example": "success"
-                    },
-                    "code": {
-                      "type": "string",
-                      "description": "responses code",
-                      "example": "200"
-                    },
-                    "data": {
-                      "type": "object",
-                      "description": "responses data",
-                      "example": {
-                        "message": "Verification is successful"
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          },
-
-          "500": {
-            "description": "Iternal Server Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error500"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-
-    "/users/verify": {
-      "post": {
-        "tags": ["Users"],
-        "summary": "Resend verification email",
-        "security": [{ "Bearer": [] }],
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "required": ["email"],
-                "properties": {
-                  "email": {
-                    "type": "string",
-                    "example": "name@email.com",
-                    "description": "Email"
-                  }
-                }
-              }
-            }
-          }
-        },
-
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "string",
-                      "description": "responses status",
-                      "example": "success"
-                    },
-                    "code": {
-                      "type": "string",
-                      "description": "responses code",
-                      "example": "200"
-                    },
-                    "data": {
-                      "type": "object",
-                      "description": "responses data",
-                      "example": { "message": "Check your email" }
-                    }
-                  }
-                }
-              }
-            }
-          },
-
-          "500": {
-            "description": "Iternal Server Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error 500"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-
     "/transactions/all": {
       "get": {
         "tags": ["Transactions"],
@@ -619,206 +503,6 @@
       }
     },
 
-    "/transactions/{transactionId}": {
-      "patch": {
-        "tags": ["Transactions"],
-        "summary": "Change transaction",
-        "parameters": [
-          {
-            "name": "transactionId",
-            "in": "path",
-            "description": "transactionId",
-            "required": "true",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "security": [{ "Bearer": [] }],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "required": ["date", "category", "amount", "type"],
-                "properties": {
-                  "date": {
-                    "type": "string",
-                    "example": "Sat Nov 13 2021 12:51:02",
-                    "description": "date"
-                  },
-                  "category": {
-                    "type": "string",
-                    "example": "salary",
-                    "description": "category"
-                  },
-                  "comments": {
-                    "type": "string",
-                    "example": "My salary",
-                    "description": "comments"
-                  },
-                  "amount": {
-                    "type": "number",
-                    "example": 5000,
-                    "description": "amount"
-                  },
-                  "type": {
-                    "type": "string",
-                    "example": "income",
-                    "description": "type"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "string",
-                      "description": "responses status",
-                      "example": "success"
-                    },
-                    "code": {
-                      "type": "string",
-                      "description": "responses code",
-                      "example": "200"
-                    },
-                    "data": {
-                      "type": "object",
-                      "description": "responses data",
-                      "example": {
-                        "transactions": {
-                          "comments": "salary",
-                          "date": "Sat Nov 13 2021 12:51:02",
-                          "type": "income",
-                          "category": "My salary",
-                          "amount": 5000,
-                          "id": "1q2-w3e-4r5-t6y"
-                        },
-                        "totalBalance": 5000
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Iternal Server Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error500"
-                }
-              }
-            }
-          }
-        }
-      },
-
-      "delete": {
-        "tags": ["Transactions"],
-        "summary": "Delete transaction",
-        "parameters": [
-          {
-            "name": "transactionId",
-            "in": "path",
-            "description": "transactionId",
-            "required": "true",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "security": [{ "Bearer": [] }],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "required": ["date", "amount", "type"],
-                "properties": {
-                  "date": {
-                    "type": "string",
-                    "example": "Sat Nov 13 2021 12:51:02",
-                    "description": "date"
-                  },
-                  "amount": {
-                    "type": "number",
-                    "example": 10000,
-                    "description": "amount"
-                  },
-                  "type": {
-                    "type": "string",
-                    "example": "income",
-                    "description": "type"
-                  }
-                }
-              }
-            }
-          }
-        },
-
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "string",
-                      "description": "responses status",
-                      "example": "success"
-                    },
-                    "code": {
-                      "type": "string",
-                      "description": "responses code",
-                      "example": "200"
-                    },
-                    "data": {
-                      "type": "object",
-                      "description": "responses data",
-                      "example": {
-                        "transactions": {
-                          "comments": "salary",
-                          "date": "Sat Nov 13 2021 12:51:02",
-                          "type": "income",
-                          "category": "My salary",
-                          "amount": 5000,
-                          "id": "1q2-w3e-4r5-t6y"
-                        },
-                        "totalBalance": 5000
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          },
-
-          "500": {
-            "description": "Iternal Server Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error500"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-
     "/transactions/statistics/{month}/{year}": {
       "get": {
         "tags": ["Transactions"],
@@ -957,280 +641,6 @@
           }
         }
       }
-    },
-
-    "/categories/new": {
-      "post": {
-        "tags": ["Categories"],
-        "summary": "Create category",
-        "security": [{ "Bearer": [] }],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "required": ["category"],
-                "properties": {
-                  "category": {
-                    "type": "string",
-                    "example": "salary",
-                    "description": "category"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "string",
-                      "description": "responses status",
-                      "example": "success"
-                    },
-                    "code": {
-                      "type": "string",
-                      "description": "responses code",
-                      "example": "200"
-                    },
-                    "data": {
-                      "type": "object",
-                      "description": "responses data",
-                      "example": {
-                        "newCategory": {
-                          "_id": "1q2w3e4r5t6y7",
-                          "value": "Kids",
-                          "color": "#FFC0CB"
-                        }
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          },
-
-          "409": {
-            "description": "Conflict",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "string",
-                      "description": "status",
-                      "example": "error"
-                    },
-                    "code": {
-                      "type": "string",
-                      "description": "code",
-                      "example": "409"
-                    },
-                    "message": {
-                      "type": "string",
-                      "description": "conflict",
-                      "example": "Category already exist"
-                    }
-                  }
-                }
-              }
-            }
-          },
-
-          "500": {
-            "description": "Iternal Server Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error500"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-
-    "/categories/{categoryId}": {
-      "delete": {
-        "tags": ["Categories"],
-        "summary": "Delete category",
-        "parameters": [
-          {
-            "name": "categoryId",
-            "in": "path",
-            "description": "categoryId",
-            "required": "true",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "security": [{ "Bearer": [] }],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "required": ["category"],
-                "properties": {
-                  "category": {
-                    "type": "string",
-                    "example": "Kids"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "string",
-                      "description": "responses status",
-                      "example": "success"
-                    },
-                    "code": {
-                      "type": "string",
-                      "description": "responses code",
-                      "example": "200"
-                    },
-                    "data": {
-                      "type": "object",
-                      "description": "responses data",
-                      "example": {
-                        "isDeleted": true,
-                        "deletedCategory": {
-                          "value": "Kids",
-                          "color": "#FFC0CB",
-                          "id": "1q2w3e4r5t6y7"
-                        }
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          },
-
-          "500": {
-            "description": "Iternal Server Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error500"
-                }
-              }
-            }
-          }
-        }
-      },
-
-      "patch": {
-        "tags": ["Categories"],
-        "summary": "Change category",
-        "security": [{ "Bearer": [] }],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "required": ["category"],
-                "properties": {
-                  "category": {
-                    "type": "string",
-                    "example": {
-                      "oldCategoryName": "Kids",
-                      "newCategoryName": "Wine"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        },
-
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "string",
-                      "description": "responses status",
-                      "example": "success"
-                    },
-                    "code": {
-                      "type": "string",
-                      "description": "responses code",
-                      "example": "200"
-                    },
-                    "data": {
-                      "type": "object",
-                      "description": "responses data"
-                    }
-                  }
-                }
-              }
-            }
-          },
-
-          "409": {
-            "description": "Conflict",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "string",
-                      "description": "status",
-                      "example": "error"
-                    },
-                    "code": {
-                      "type": "string",
-                      "description": "code",
-                      "example": "404"
-                    },
-                    "message": {
-                      "type": "string",
-                      "description": "Not Found",
-                      "example": "Category doesn`t exist"
-                    }
-                  }
-                }
-              }
-            }
-          },
-
-          "500": {
-            "description": "Iternal Server Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error 500"
-                }
-              }
-            }
-          }
-        }
-      }
     }
   },
 
@@ -1263,7 +673,7 @@
         }
       }
     },
-    
+
     "securitySchemes": {
       "Bearer": {
         "type": "http",
